--- a/public/css/home.css
+++ b/public/css/home.css
@@ -122,7 +122,7 @@
 /* GENERAL PAGE STRUCTURE */
 body {
     margin: 0;
-    background-color:#fad505;
+    background-color:#000;
 }
 
 /* NAV BAR */
@@ -133,7 +133,7 @@ body {
     border-bottom: none;
     transition: border .5s ease;
 }
-a:visited {color: #fff;}
+a:visited {color: #000;}
 a:hover {
     color: rgb(240, 236, 22);
    /* border-bottom: 1px solid #F0FFE5; */
@@ -144,7 +144,7 @@ a:active {
 }
 .btn 
 {
- background-color: black;
+ background-color: orange;
 }
 
 /* HIDING BAR */
@@ -156,7 +156,7 @@ a:active {
 h1 {
     font: 38.41px Playfair Display, Times New Roman, serif;
     font-variant-ligatures: none;
-    color: #000;
+    color:orange;
     letter-spacing: .2em;
     transition: color 0.5s ease;
 }
